{
  "version": 4,
  "terraform_version": "1.13.4",
  "serial": 17,
  "lineage": "614daae7-56d9-ad26-f2ca-878a8d752129",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_mumbai",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].mumbai",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a34b530c620f51a2",
            "arn": "arn:aws:ec2:ap-south-1:401646244080:instance/i-038e6cc8aa39bc427",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-038e6cc8aa39bc427",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "kp-mumbai",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0457be6df13cf4fe0",
            "private_dns": "ip-10-10-1-241.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.1.241",
            "public_ip": "13.201.122.7",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0dea7ec3722486a60",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0dbb77e0650042c1a",
            "tags": {
              "Name": "ec2-mumbai"
            },
            "tags_all": {
              "Name": "ec2-mumbai"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0294691f97756a7df"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_key_pair.kp_mumbai",
            "aws_security_group.sg_mumbai",
            "aws_subnet.subnet_mumbai",
            "aws_vpc.vpc_mumbai",
            "data.aws_ami.amazon_linux_mumbai"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_singapore",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].singapore",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a277168b24e51187",
            "arn": "arn:aws:ec2:ap-southeast-1:401646244080:instance/i-0d0bceb4c84c461d8",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d0bceb4c84c461d8",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "kp-singapore",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c6cb534829e3c459",
            "private_dns": "ip-10-20-1-47.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.20.1.47",
            "public_ip": "54.179.50.31",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-061b15d88c25d86c1",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0180b96f3a2c5c22c",
            "tags": {
              "Name": "ec2-singapore"
            },
            "tags_all": {
              "Name": "ec2-singapore"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f993588a6c9aa70f"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_key_pair.kp_singapore",
            "aws_security_group.sg_singapore",
            "aws_subnet.subnet_singapore",
            "aws_vpc.vpc_singapore",
            "data.aws_ami.amazon_linux_singapore"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw_mumbai",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].mumbai",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:401646244080:internet-gateway/igw-0b99e2a27b59c7e04",
            "id": "igw-0b99e2a27b59c7e04",
            "owner_id": "401646244080",
            "vpc_id": "vpc-0781ef3abc5da8756"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc_mumbai"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw_singapore",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].singapore",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:401646244080:internet-gateway/igw-08ad6bb02c2840d8e",
            "id": "igw-08ad6bb02c2840d8e",
            "owner_id": "401646244080",
            "vpc_id": "vpc-0e1f73e623ba05dc2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc_singapore"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt_mumbai",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].mumbai",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:401646244080:route-table/rtb-05f8866c6aa6c2cc5",
            "id": "rtb-05f8866c6aa6c2cc5",
            "owner_id": "401646244080",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b99e2a27b59c7e04",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0781ef3abc5da8756"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw_mumbai",
            "aws_vpc.vpc_mumbai"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt_singapore",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].singapore",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:401646244080:route-table/rtb-093b0db0cd09e386d",
            "id": "rtb-093b0db0cd09e386d",
            "owner_id": "401646244080",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08ad6bb02c2840d8e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e1f73e623ba05dc2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw_singapore",
            "aws_vpc.vpc_singapore"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta_mumbai",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].mumbai",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ed73a5db06da8d17",
            "route_table_id": "rtb-05f8866c6aa6c2cc5",
            "subnet_id": "subnet-0dbb77e0650042c1a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw_mumbai",
            "aws_route_table.rt_mumbai",
            "aws_subnet.subnet_mumbai",
            "aws_vpc.vpc_mumbai"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta_singapore",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].singapore",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-018acca041e4478d9",
            "route_table_id": "rtb-093b0db0cd09e386d",
            "subnet_id": "subnet-0180b96f3a2c5c22c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw_singapore",
            "aws_route_table.rt_singapore",
            "aws_subnet.subnet_singapore",
            "aws_vpc.vpc_singapore"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_mumbai",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].mumbai",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:401646244080:security-group/sg-0294691f97756a7df",
            "description": "Allow SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0294691f97756a7df",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow-ssh",
            "name_prefix": "",
            "owner_id": "401646244080",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0781ef3abc5da8756"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc_mumbai"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_singapore",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].singapore",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:401646244080:security-group/sg-0f993588a6c9aa70f",
            "description": "Allow SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f993588a6c9aa70f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow-ssh",
            "name_prefix": "",
            "owner_id": "401646244080",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e1f73e623ba05dc2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc_singapore"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_mumbai",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].mumbai",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:401646244080:subnet/subnet-0dbb77e0650042c1a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dbb77e0650042c1a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "401646244080",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0781ef3abc5da8756"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc_mumbai"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_singapore",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].singapore",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:401646244080:subnet/subnet-0180b96f3a2c5c22c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.20.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0180b96f3a2c5c22c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "401646244080",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0e1f73e623ba05dc2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc_singapore"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_mumbai",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].mumbai",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:401646244080:vpc/vpc-0781ef3abc5da8756",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-0ab429ceb6dc8b374",
            "default_route_table_id": "rtb-0e6221090bd587167",
            "default_security_group_id": "sg-0a5cb245e1a749527",
            "dhcp_options_id": "dopt-0f789a7f29b806485",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0781ef3abc5da8756",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e6221090bd587167",
            "owner_id": "401646244080"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_singapore",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].singapore",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:401646244080:vpc/vpc-0e1f73e623ba05dc2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.20.0.0/16",
            "default_network_acl_id": "acl-0d6d3f27493e89252",
            "default_route_table_id": "rtb-0407c015dbb622ba1",
            "default_security_group_id": "sg-0942a5f76c7a876ef",
            "dhcp_options_id": "dopt-0c8ddf9cd5cb70537",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e1f73e623ba05dc2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0407c015dbb622ba1",
            "owner_id": "401646244080"
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}